# fw_esp_idf_app_socket_stdio

./: CMakeLists.txt  Kconfig.projbuild  app_socket_stdio.c  app_socket_stdio.h
